--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 
   <body>
     <%= link_to "Home", root_path %>
-    <%= link_to "All Subjects", all_subjects_path %>
+    <%= link_to "All Subjects", subjects_path %>
     <% if signed_in? %>
-      <%= link_to "My Profile", profile_path(current_user) %>
+      <%= link_to "My Profile", profile_path(current_user.profile) %>
       <%= link_to "Sign Out", session_path, method: :delete %>
     <% else %>
       <%= link_to "Sign Up", new_user_path %>
