--- a/app/views/subjects/_subject.html.erb
+++ b/app/views/subjects/_subject.html.erb
@@ -1,3 +1,3 @@
 <% subjectable.subjects.each do |subject| %>
-  <p><%= subject.title %></p>
+  <p><%= link_to subject.title, subject_path(subject) %></p>
 <% end %>
