Successfully added edit and delete functionality to locations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <% if notice %>
+      <p><%= notice %></p>
+    <% end %>
+
     <%= link_to "Home", root_path %>
     <%= link_to "All Subjects", subjects_path %>
     <% if signed_in? %>
