--- a/app/views/subjects/_subject.html.erb
+++ b/app/views/subjects/_subject.html.erb
@@ -1,3 +1,4 @@
+<h3>My Chats</h3>
 <% subjectable.subjects.each do |subject| %>
   <p><%= link_to subject.title, subject_path(subject) %></p>
 <% end %>
