--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,6 +1,14 @@
 <h1><%= @subject.title %></h1>
 <p>Created by: <%= @subject.user.email %>, <%= time_ago_in_words(@subject.created_at) + ' ago' %></p>
 
+<div>
+  <%= render partial: 'comments/form', locals: {commentable: @subject} %>
+</div>
 
-<%= render partial: 'comments/comment', locals: {commentable: @subject} %>
-<%= render partial: 'comments/form', locals: {commentable: @subject} %>
+<div>
+  <%= render partial: 'comments/comment', locals: {commentable: @subject} %>
+</div>
+
+
+<!-- <%= render partial: 'comments/comment', locals: {commentable: @subject} %>
+<%= render partial: 'comments/form', locals: {commentable: @subject} %> -->
