--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,14 +2,15 @@
   <div>
     <hr>
     <% if commentable == @subject %>
-      <p><%= comment.body %>  |  Posted by <%= comment.user.email %>, <%= time_ago_in_words(comment.created_at) + ' ago' %></p>
+      <p><%= comment.body %>  |  Posted by <%= link_to comment.user.email, profile_path(comment.user.profile) %>, <%= time_ago_in_words(comment.created_at) + ' ago' %></p>
 
       <% if comment.user == current_user %>
-        <%= link_to "Edit", edit_comment_path(comment, subject: 'subject') %>
-        <%= link_to "Delete", comment_path(comment), method: :delete %>
+        <%= link_to "Edit", edit_comment_path(comment, subject: 'subject'), remote: true %>
+        <%= link_to "Delete", comment_path(comment), method: :delete, remote: true %>
       <% end %>
 
     <% else %>
+      <h3>My Blog</h3>
       <p><<%= comment.title %></p>
       <p><%= comment.body %> </p>
     <% end %>
