--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [commentable, Comment.new] do |f| %>
+<%= form_for [commentable, Comment.new], remote: true do |f| %>
   <% if commentable == @subject %>
     <p><%= f.text_area :body, placeholder: "Say something.." %></p>
     <%= f.submit %>
