--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,3 +1,4 @@
+<h3>My Location</h3>
 <% locationable.locations.each do |location| %>
   <p><%= location.suburb %></p>
   <% if current_user.profile.locations.include?(location) %>
