Fixed typo on comments partial

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -11,7 +11,7 @@
 
     <% else %>
       <h3>My Blog</h3>
-      <p><<%= comment.title %></p>
+      <p><%= comment.title %></p>
       <p><%= comment.body %> </p>
     <% end %>
   </div>
