--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,8 @@
 <div>
   <p>Hi <%= @user.email %></p>
+
+  <%= follow_button(@user) %>
+  
   <% if @profile.bio %>
     <hr>
     <p><%= @profile.bio %></p>
